2005-01-08  Tamara Roberson  <foxxygirltamara@gmail.com>

	* configure.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Global.cs:
	* src/HandleView.cs:
	* src/Makefile.am:
	R src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	
	Renamed the Muine class to Global to eliminate confusion with the Muine
	namespace.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Store song after the album cover has been stored,
	in case of unexpected exit.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/SongDatabase.cs:

	Do look for covers for new files even though CoverDB.Loading = true.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Gracefully cancel the thread instead of using a brute Thread.Abort ().

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Start playing when opening a playlist.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/SongDatabase.cs:
	* src/ThreadBase.cs:

	Port the CoverDatabase thread over to ThreadBase as well.
	Also fix a silly bug when importing.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Small cleanup.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	R src/ActionThread.cs:
	* src/FileUtils.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:
	* src/ThreadBase.cs:

	Run regular folder imports in a thread too, clean up
	thread stuff.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Muine.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Redo SongDatabase threading stuff. UI is now fully responsive
	while it brings the library in sync with the disc.
