@@ -1,3 +1,14 @@
+2005-01-08  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/Config.cs:
+	* src/CoverGetter.cs:
+	* src/Global.cs:
+	* src/GnomeProxy.cs:
+	* src/SongDatabase.cs:
+
+	- Clean up Global stuff to actually be global.
+	- GnomeProxy, SongDatabase and CoverGetter react to GConf changes
+
 2005-01-08  Tamara Roberson  <foxxygirltamara@gmail.com>
 
 	* configure.in:
